[package]
name = "poremm2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.17"
minimap2 = { version = "0.1.11", features = ["simde"]}
minimap2-sys = { version = "0.1.10", features = ["simde"]}
rust-htslib = "0.42.0"
